Richard Earnshaw  <richard.earnshaw@arm.com> Steven Bosscher  <stevenb@suse.de>

PR rtl-optimization/23117
	* sched-rgn.c (add_branch_dependences): Handle COND_EXEC correctly
	when head == tail.  Tidy comment.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@102551 138bc75d-0d04-0410-961f-82ee72b054a4